--- a/theme.scss
+++ b/theme.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 /*-- scss:defaults --*/
 
 
